sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:2: error: illegal start of simple pattern
var int i=0
         ^AlgBubbleSort1:3: error: '=' expected but ';' found.
def bubbleSort()  {
^AlgBubbleSort1:4: error: illegal start of simple pattern
	var int l = getNombreValeurs()
                  ^AlgBubbleSort1:5: error: '=' expected but ';' found.
	var faitechange:Boolean=true
^AlgBubbleSort1:11: error: ')' expected but '}' found.
		}
                ^