sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
var int i=0
def bubbleSort()  {
	var int l = getNombreValeurs()
	var faitechange:Boolean=true
	while(faitechange==true){
		for(i<-0 to l-2){
		 if(plusPetit(i,i+1){
		 	echange(i,i+1)
		 }
		}
	}
}

